some of the fixes (links open don't open in new window anymore, twitter icon before linkedin, white gap in svg removed)

--- a/themes/openfuture/assets/scss/style.scss
+++ b/themes/openfuture/assets/scss/style.scss
@@ -37,16 +37,12 @@ input:focus, .btn:focus {
   outline: none;
 }
 
-.three-em {
-  height: 3em;
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Chaney', 'Helvetica', sans-serif;
 }
 
 h1 {
-  font-size:2em;
+  font-size:2.2em;
   line-height: 0.9em;
 }
 
